@@ -4,58 +4,95 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class PlayableGameTest {
+  private static final Player PLAYER = new Player("Stanley");
+
   @Test
-  void givenEmptyPlayersList_whenCreate_thenOk() {
-    assertThat(new MockPlayableGame(Collections.emptyList(), 1)).isNotNull();
+  void givenPlayers_whenInstance_thenOk() {
+    PlayableGame game = new MockPlayableGame(Collections.singletonList(PLAYER));
+
+    assertThat(game.getPlayers()).hasSize(1);
+    assertThat(game.getPlayers().get(0)).isEqualTo(PLAYER);
+    assertThat(game.getMaxPlayers()).isEqualTo(1);
+    assertThatThrownBy(() -> game.getPlayers().add(PLAYER)).isInstanceOf(UnsupportedOperationException.class);
   }
 
   @Test
-  void givenTooManyPlayers_whenCreate_thenKo() {
-    assertThatThrownBy(() -> new MockPlayableGame(List.of(new Object(), new Object()), 1))
-        .isInstanceOf(IllegalArgumentException.class)
-        .hasMessage("Too many players !");
-  }
+  void givenInstanceWithPlayers_whenNewPlayer_thenException() {
+    PlayableGame game = new MockPlayableGame(Collections.singletonList(PLAYER));
 
-  @Test
-  void givenOnePlayerInOnePlayerGame_whenNewPlayer_thenKo() {
-    PlayableGame game = new MockPlayableGame(List.of(new Object()), 1);
     assertThatThrownBy(game::newPlayer)
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Too many players !");
   }
 
   @Test
-  void whenNewPlayer_thenPlayersListIncreased() {
-    PlayableGame game = new MockPlayableGame(new LinkedList(), 1);
-    Player player = game.newPlayer();
-    assertThat(game.getPlayers()).hasSize(1);
-    assertThat(game.getPlayers().get(0)).isEqualTo(player);
+  void givenMaxPlayers_whenInstance_thenOk() {
+    PlayableGame game = new MockPlayableGame(1);
+
+    assertThat(game.getMaxPlayers()).isEqualTo(1);
+    assertThat(game.getPlayers()).isEmpty();
   }
 
   @Test
-  void whenInit_thenMaxPlayersAreCreatedAndPlayersListIsUnmodifiable() {
+  void givenGameWithNotEnoughPlayers_whenNewPlayer_thenAddPlayer() {
+    PlayableGame game = new MockPlayableGame(2);
+
+    game.newPlayer();
+
+    assertThat(game.getPlayers()).isNotEmpty();
+    assertThat(game.getPlayers().get(0)).isEqualTo(PLAYER);
+  }
+
+  @Test
+  void givenGameWithNotEnoughPlayers_whenNewPlayerForLastPlayer_thenAddPlayerAndPlayersListIsUnmodifiable() {
+    PlayableGame game = new MockPlayableGame(1);
+
+    game.newPlayer();
+
+    assertThat(game.getPlayers()).isNotEmpty();
+    assertThat(game.getPlayers().get(0)).isEqualTo(PLAYER);
+    assertThatThrownBy(() -> game.getPlayers().add(PLAYER))
+        .isInstanceOf(UnsupportedOperationException.class);
+  }
+
+  @Test
+  void givenGameWithEnoughPlayers_whenNewPlayer_thenException() {
+    PlayableGame game = new MockPlayableGame(1);
+    game.newPlayer();
+
+    assertThatThrownBy(game::newPlayer)
+        .isInstanceOf(IllegalArgumentException.class)
+        .hasMessage("Too many players !");
+  }
+
+  @Test
+  void whenInit_thenAllPlayerAreAddedAndPlayersListIsUnmodifiable() {
     int max = 1;
-    PlayableGame game = new MockPlayableGame(new LinkedList(), max);
+    PlayableGame game = new MockPlayableGame(max);
 
     game.doInit();
 
     assertThat(game.getPlayers()).hasSize(max);
-    assertThatThrownBy(() -> game.getPlayers().add(new Object())).isInstanceOf(UnsupportedOperationException.class);
+    assertThatThrownBy(() -> game.getPlayers().add(PLAYER))
+        .isInstanceOf(UnsupportedOperationException.class);
   }
 
-  private static class MockPlayableGame extends PlayableGame {
-    protected MockPlayableGame(List players, int maxPlayers) {
-      super("bob game", players, maxPlayers);
+  private static class MockPlayableGame extends PlayableGame<Player> {
+    protected MockPlayableGame(int maxPlayers) {
+      super("The Stanley Parable", maxPlayers);
+    }
+
+    protected MockPlayableGame(List<Player> players) {
+      super("Stanley Parable", players);
     }
 
     @Override
     protected Player createPlayer() {
-      return new Player("bob") {};
+      return PLAYER;
     }
   }
 }
